# genpydoc

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  README.rst  main.py  pyproject.toml
.github/workflows/: ci.yml  publish-testpypi.yml  publish.yml
analyzer/: analyzer.py  git_utils.py
commenter/: commenter.py  transformer.py  types.py
config/: config.py
docs/: changelog.rst  conf.py  index.rst
docs/api/: genpydoc.commenter.rst  genpydoc.config.rst  genpydoc.extractor.rst  genpydoc.git_retriever.rst  genpydoc.rst  genpydoc.utils.rst  modules.rst
extractor/: config.py  extract.py  visit.py
git_retriever/: git_retriever.py  utils.py
src/genpydoc/: __main__.py  cli.py  documenter.py
src/genpydoc/commenter/: commenter.py  transformer.py
src/genpydoc/config/: config.py
src/genpydoc/extractor/: extract.py  visit.py
src/genpydoc/git_retriever/: git_retriever.py  playground.py  utils.py
src/genpydoc/utils/: utils.py
src/pydocai/: __main__.py  cli.py  documenter.py
src/pydocai/commenter/: commenter.py  transformer.py
src/pydocai/config/: config.py
src/pydocai/extractor/: extract.py  visit.py
src/pydocai/git_retriever/: git_retriever.py
src/pydocai/utils/: utils.py
utils/: utils.py
