[project]
name = "genpydoc"
version = "1.0.4"
description = "Use AI agent to analyze if a method's documentation is correct and sufficient."
authors = [
    {name = "Ernest Vanmosuinck",email = "ernest.vanmo@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gitpython (>=3.1.46,<4.0.0)",
    "black (>=26.1.0,<27.0.0)",
    "ruff (>=0.14.13,<0.15.0)",
    "openai (>=2.15.0,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "aiohttp (>=3.13.3,<4.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "docconvert (>=2.2.0,<3.0.0)",
    "setuptools (>=82.0.0,<83.0.0)",
]
build-backend = "setuptools.build_meta"

[tool.check-wheel-contents]
toplevel = ["interrogate"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0","setuptools >= 77.0.3"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.ruff]
line-length = 79

[tool.genpydoc]
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-nested-functions = false
ignore-nested-classes = false
ignore-setters = false
ignore-overloaded-functions = false
# possible values: sphinx (default), google
style = "google"